[package]
name = "schemerz-postgres"
version = "0.0.0"
edition = "2021"
rust-version = "1.59"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "PostgreSQL adapter for the Schemer database schema migration library"
readme = "../README.md"
keywords = ["database", "migration", "postgresql", "sql"]
categories = ["database"]
license = "MIT/Apache-2.0"
repository = "https://github.com/aschampion/schemer"

[dependencies]
postgres = { version = "0.19", features = ["with-uuid-1"] }
uuid = { version = "1" }

schemerz = { version = "0.0", path = "../schemerz" }
