[package]
name = "schemerz-postgres"
version = "0.190.0"
edition = "2021"
rust-version = "1.59"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
description = "PostgreSQL adapter for the Schemerz database schema migration library"
readme = "../README.md"
keywords = ["database", "migration", "postgresql", "sql"]
categories = ["database"]
license = "MIT/Apache-2.0"
repository = "https://github.com/zcash/schemerz"

[dependencies]
postgres = { version = "0.19", features = ["with-uuid-1"] }
uuid = { version = "1" }

schemerz = { version = "0.2", path = "../schemerz" }
