[package]
name = "schemerz-postgres"
version = "0.191.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "PostgreSQL adapter for the Schemerz database schema migration library"
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords = ["database", "migration", "postgresql", "sql"]
categories = ["database"]

[dependencies]
postgres = { version = "0.19", features = ["with-uuid-1"] }
uuid.workspace = true

schemerz.workspace = true
