[package]
name = "schemerz-rusqlite"
version = "0.320.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SQLite3 adapter for the Schemerz database schema migration library "
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords = ["database", "migration", "sqlite", "sql"]
categories = ["database"]

[dependencies]
uuid.workspace = true
rusqlite = "0.32"

schemerz.workspace = true
