[package]
name = "schemerz-rusqlite"
version = "0.350.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "SQLite3 adapter for the Schemerz database schema migration library "
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords = ["database", "migration", "sqlite", "sql"]
categories = ["database"]

[dependencies]
rusqlite = "0.36"
uuid.workspace = true

schemerz.workspace = true
