[package]
name = "schemerz"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A database schema migration library with DAG dependencies"
readme = "../README.md"
repository.workspace = true
license.workspace = true
keywords = ["database", "migration", "sql"]
categories = ["database"]

[dependencies]
daggy = "0.8"
log = "0.4"
thiserror = "2"
uuid.workspace = true
indexmap = "2"
